@@ -43,6 +43,17 @@ t/05-coding-08.t
 t/05-coding-09.t
 t/05-coding-10.t
 t/05-coding-11.t
+t/10-delta_to_fib.t
+t/11-text.t
+t/12-write-0-1.t
+t/13-mixed.t
+t/14-range.t
+t/15-raw-size.t
+t/16-exporting.t
+t/17-interleave.t
+t/18-multiget.t
+t/19-put-string.t
+t/20-put-stream.t
 t/70-failures.t
 t/71-bad_gets.t
 t/72-rand-bad-gets.t
@@ -50,17 +61,6 @@ t/90-release-perlcritic.t
 t/91-release-pod-syntax.t
 t/92-release-pod-coverage.t
 t/93-release-kwalitee.t
-t/delta_to_fib.t
-t/exporting.t
-t/interleave.t
-t/mixed.t
-t/multiget.t
-t/put_stream.t
-t/put_string.t
-t/range.t
-t/raw_size.t
-t/text.t
-t/write-0-1.t
 t/lib/BitStreamTest.pm
 examples/3d-unary.raw
 examples/bench-codes.pl
